Removed redirect to [[Category:Xeebta Soomaaliyeed]]

--- a/Category:Somaliland.mw
+++ b/Category:Somaliland.mw
@@ -1,1 +1,3 @@
-#redirect [[Category:Xeebta Soomaaliyeed]]
+[[Somaliland]] waa wadan iskii isku magacaabay oo wali la aqoonsan.
+{{Commonscat|Somaliland}}
+[[Category:Soomaaliya|Xeebta Soomaaliyeed]]
