*Empty MediaWiki Message*

--- a/Category:Taariikhda_Somaliland.mw
+++ b/Category:Taariikhda_Somaliland.mw
@@ -1,5 +1,5 @@
 Somaliland
 {{Commonscat|History of Somaliland}}
 
-[[Category:Xeebta Soomaaliyeed]]
+[[Category:Somaliland]]
 [[Category:Taariikhda Soomaaliya]]
