*Empty MediaWiki Message*

--- a/Category:Dugsiga_Sare_ee_Camuud.mw
+++ b/Category:Dugsiga_Sare_ee_Camuud.mw
@@ -3,7 +3,7 @@
 '''Dugsiga Sare ee Camuud''' (Amoud High-school) waa [[dugsi|dugsi sare]] oo ku ooli jirey deegaanka [[Camuud]] ee [[5|5ta km]] waqooyi bari ka xiga magaalada [[Borama]], gobolka [[Awdal]], [[Somaliland]]. 
 
 Qoraal faahfaahsan fiiri [[Dugsiga Sare ee Camuud]].
-
+[[Category:Somaliland]]
 [[Category:Waxbarashada Soomaaliya]]
 [[Category:Jaamacada Camuud]]
 [[Category:Jaamacadaha Soomaaliya|Camuud]]
