*Empty MediaWiki Message*

--- a/Category:Gobolada_Somaliland.mw
+++ b/Category:Gobolada_Somaliland.mw
@@ -1,3 +1,4 @@
 {{Commonscat|Regions of Somaliland}}
 
-[[Category:Juqraafiga Soomaaliland]]
+[[Category:Juqraafiga Somaliland]]
+[[Category:Somaliland]]
