*Empty MediaWiki Message*

--- a/Category:Degmooyinka_Gobolka_Awdal.mw
+++ b/Category:Degmooyinka_Gobolka_Awdal.mw
@@ -1,2 +1,5 @@
 [[Category:Degmooyinka Soomaaliya|Awdal]]
 [[Category:Awdal]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
