*Empty MediaWiki Message*

--- a/Category:Magaalooyinka_Gobolka_Sanaag.mw
+++ b/Category:Magaalooyinka_Gobolka_Sanaag.mw
@@ -1,2 +1,5 @@
 [[Category:Magaalooyinka somaliland|Sanaag]]
 [[Category:Sanaag]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
