*Empty MediaWiki Message*

--- a/Category:Somaliland.mw
+++ b/Category:Somaliland.mw
@@ -1,3 +1,7 @@
 [[Somaliland]] waa wadan iskii isku magacaabay oo wali la aqoonsan.
 {{Commonscat|Somaliland}}
-[[Category:Soomaaliya|Xeebta Soomaaliyeed]]
+[[Category:Soomaaliya]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
+[[Category:Afrika]]
