*Empty MediaWiki Message*

--- a/Category:Magaalooyinka_Gobolka_Togdheer.mw
+++ b/Category:Magaalooyinka_Gobolka_Togdheer.mw
@@ -1,3 +1,6 @@
 [[Category:Magaalooyinka Soomaaliya|Togdheer]]
 [[Category:Magaalooyinka Somaliland|Togdheer]]
 [[Category:Togdheer]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
