*Empty MediaWiki Message*

--- a/Category:Togdheer.mw
+++ b/Category:Togdheer.mw
@@ -1,3 +1,6 @@
 {{Commonscat|Togdheer Region}}
 
 [[Category:Gobolada Soomaaliya]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
