*Empty MediaWiki Message*

--- a/Category:Degmooyinka_Gobolka_Togdheer.mw
+++ b/Category:Degmooyinka_Gobolka_Togdheer.mw
@@ -1,2 +1,5 @@
 [[Category:Degmooyinka Soomaaliya|Togdheer]]
 [[Category:Togdheer]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
