*Empty MediaWiki Message*

--- a/Category:Siyaasada_Somaliland.mw
+++ b/Category:Siyaasada_Somaliland.mw
@@ -2,3 +2,6 @@
 
 [[Category:Xeebta Soomaaliyeed]]
 [[Category:Siyaasad]]
+[[Category:Somaliland]]
+[[Category:Dowlada Somaliland]]
+[[Category:Juqraafiga Somaliland]]
