--- a/Category:Hargeysa.mw
+++ b/Category:Hargeysa.mw
@@ -2,3 +2,6 @@
 
 [[Category:Magaalooyinka Soomaaliya]]
 [[Category:Xeebta Soomaaliyeed]]
+[[Category:Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Juqraafiga Somaliland]]
