--- a/Jaamacadda_Burco.mw
+++ b/Jaamacadda_Burco.mw
@@ -45,4 +45,6 @@ Hadaba waxaa haboon in dhamaanba dadweyanaha reer togdheer dal iyo dibadba inay 
 
 [[Category:Jaamacadaha Soomaaliya]]
 [[Category:Jaamacadaha Somaliland]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
 [[Category:Burco]]
