--- a/Camuud.mw
+++ b/Camuud.mw
@@ -96,3 +96,7 @@ File:Amoud_University2.jpg|[[Jaamacada Camuud]]
 [[Category:Ilbaxnimo]]
 [[Category:Noole]]
 [[Category:Nolol]]
+[[Category:Jaamacadaha Soomaaliya]]
+[[Category:Jaamacadaha Somaliland]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
