--- a/Dugsiga_Sare_ee_Camuud.mw
+++ b/Dugsiga_Sare_ee_Camuud.mw
@@ -43,3 +43,7 @@ Ka dib, burburkii dowladii [[Soomaaliya]] ayaa keenay in Dugsiga Sare ee Camuud 
 [[Category:Ilbaxnimo]]
 [[Category:Noole]]
 [[Category:Nolol]]
+[[Category:Jaamacadaha Soomaaliya]]
+[[Category:Jaamacadaha Somaliland]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
