*Empty MediaWiki Message*

--- a/Jaamacadda_Admas.mw
+++ b/Jaamacadda_Admas.mw
@@ -16,3 +16,7 @@
 [[Category:Jaamacadaha Soomaaliya|Admas]]
 [[Category:Woqooyi Galbeed]]
 [[Category:Jaamacadaha Somaliland]]
+[[Category:Jaamacadaha Soomaaliya]]
+[[Category:Jaamacadaha Somaliland]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
