*Empty MediaWiki Message*

--- a/Jaamacadda_Teknolojiyada_Somaliland.mw
+++ b/Jaamacadda_Teknolojiyada_Somaliland.mw
@@ -1,6 +1,6 @@
 {{Infobox university
 | name         = Jaamacadda Teknolojiyada Somaliland</br>Somaliland University of Technology (SUTECH)
-| image        = [[File:SomalilandUniversityofTechnology-Logo.JPG|210px|Astaanta Somaliland University of Technology]]
+| image        = 
 | established  = 2000 (iskubedeshay heer jaamacadeed 2007)
 | president    = Dr. Saciid Sheekh Maxamed
 | former_names = Hargeisa College of Applied Arts & Technology
@@ -33,3 +33,7 @@
 [[Category:Somaliland]]
 [[Category:Waxbarashada Soomaaliya]]
 [[Category:Jaamacadaha Somaliland]]
+[[Category:Jaamacadaha Soomaaliya]]
+[[Category:Jaamacadaha Somaliland]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
