--- a/Category:Woqooyi_Galbeed.mw
+++ b/Category:Woqooyi_Galbeed.mw
@@ -2,3 +2,6 @@
 
 
 [[Category:Gobolada Soomaaliya]]
+[[Category:Gobolada Somaliland]]
+[[Category:Somaliland]]
+[[Category:Juquraafiga Somaliland]]
