--- a/Jaamacadda_Gollis.mw
+++ b/Jaamacadda_Gollis.mw
@@ -68,3 +68,4 @@
 [[Category:Jaamacadaha Soomaaliya]]
 [[Category:Somaliland]]
 [[Category:Waxbarashada Soomaaliya]]
+[[Category:Waxbarashada Somaliland]]
