--- a/Jaamacadda_Bariga_Afrika.mw
+++ b/Jaamacadda_Bariga_Afrika.mw
@@ -1,6 +1,6 @@
 {{Infobox university
 | name              = Jaamacadda Bariga Afrika</br>East Africa University
-| image_name        = Eau-logo.jpg
+| image_name        =
 | image_size        = 
 | image_alt         = 
 | caption           = 
