--- a/Jaamacadda_Eelo.mw
+++ b/Jaamacadda_Eelo.mw
@@ -82,3 +82,5 @@ Jaamacadda Eelo waxay dhacdaa waqooyiga maamulgoboleedka [[Somaliland]]; barta [
 [[Category:Jaamacadaha Soomaaliya]]
 [[Category:Awdal]]
 [[Category:Waxbarashada Soomaaliya]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
