*Empty MediaWiki Message*

--- a/Ceegaag.mw
+++ b/Ceegaag.mw
@@ -3,3 +3,6 @@ Magaalada [[Buuhoodle]] waxay masaafo ahaan ujirtaa 70km.
 {{Degmooyinka Gobolka Togdheer}}
 
 [[Category:Magaalooyinka Gobolka Togdheer]]
+[[Category:Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Juqraafiga Somaliland]]
