*Empty MediaWiki Message*

--- a/Balli_Calanle.mw
+++ b/Balli_Calanle.mw
@@ -1,2 +1,6 @@
 '''Balli Callanle''' waa tuulo kamid ah tuulooyinka ku yaalo gobolka [[Togdheer]] qiyaastii 35 km ayay bari kaxigtaa magaalada [[Burco]] Somaliland. Waxee hoostimaadaa maamulka degmada [[Qorilugud]].
 {{Degmooyinka Gobolka Togdheer}}
+[[Category:Magaalooyinka Soomaaliya]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Somaliland]]
+[[Category:Waxbarashada Somaliland]]
