--- a/Category:Magaalooyinka_Gobolka_Woqooyi_Galbeed.mw
+++ b/Category:Magaalooyinka_Gobolka_Woqooyi_Galbeed.mw
@@ -1,2 +1,5 @@
 [[Category:Magaalooyinka Soomaaliya|Woqooyi Galbeed]]
 [[Category:Woqooyi Galbeed]]
+[[Category:Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Juqraafiga Somaliland]]
