*Empty MediaWiki Message*

--- a/Category:Degmooyinka_Gobolka_Woqooyi_Galbeed.mw
+++ b/Category:Degmooyinka_Gobolka_Woqooyi_Galbeed.mw
@@ -1,2 +1,5 @@
 [[Category:Degmooyinka Soomaaliya|Woqooyi Galbeed]]
 [[Category:Woqooyi Galbeed]]
+[[Category:Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Juqraafiga Somaliland]]
