--- a/Category:Gobolada_somaliland.mw
+++ b/Category:Gobolada_somaliland.mw
@@ -1,3 +1,1 @@
-[[Category:Somaliland]]
-[[Category:Gobolada Somaliland]]
-[[Category:Juqraafiga Somaliland]]
+#REDIRECT [[Category:Gobolada Somaliland]]
