*Empty MediaWiki Message*

--- a/Hawd.mw
+++ b/Hawd.mw
@@ -13,5 +13,7 @@ Waxa uu kaga beeganyay caadima da somaliland ee Hargeysa koonfur waxanu ujiraa 6
 
 {{gumud}}
 
-[[Category:Gobolada Somaliland]]
 {{Gobolada Soomaaliland}}
+[[Category:Juqraafiga Somaliland]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
