--- a/Salal.mw
+++ b/Salal.mw
@@ -30,3 +30,6 @@ Gobolka Salel waxaa hoos yimaado [[degmo]]oyin badan oo wakhtiyadii hore ka tirs
 ==Xigasho==
 {{reflist}}
 [[Category:Awdal]]
+[[Category:Juqraafiga Somaliland]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
