*Empty MediaWiki Message*

--- a/Garisa.mw
+++ b/Garisa.mw
@@ -3,3 +3,6 @@ waxaa ku dhashay magaaladan madaxweynihii hore ee jabuuti xaaji xasan guuleed ab
 
 [[Category:Salal]]
 [[Category:Tuulooyinka somaliland]]
+[[Category:Juqraafiga Somaliland]]
+[[Category:Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
