--- a/Saraar.mw
+++ b/Saraar.mw
@@ -7,7 +7,7 @@
 |motto                  =
 |image_skyline          =
 |imagesize              =
-|image_caption          =Suuq yer.
+|image_caption          =
 |image_flag             = 
 |flag_size              =
 |image_seal             = 
@@ -47,12 +47,12 @@
 |timezone               =[[Saacadda Afrikada Bari|EAT]]
 |utc_offset             =+3
 |timezone_DST           =  
-|Saraar caynaba| GDP_PPP_per_capita = $7,425<ref name="IMF database 2018" />
+|Saraar caynaba| GDP_PPP_per_capita = $7,425
 | GDP_PPP_per_capita_rank = 
-| GDP_nominal = 388 Million ref name="IMF database 2018" />
+| GDP_nominal = 388 Million 
 | GDP_nominal_year = 2017
 | GDP_nominal_rank = 
-| GDP_nominal_per_capita = $7,550<ref name="IMF database 2018" />
+| GDP_nominal_per_capita = $7,550
 | |GDP_nominal_per_capita_rank = 
 |utc_offset_DST         = 
 |latd=8|latm=57|lats=24|latNS=N
@@ -66,7 +66,8 @@
 |blank_info             =
 |website                = 
 |footnotes              = 
-}}<ref>gobolka saraar</ref>{{Gobolada Soomaaliland}}
+}}
+{{Gobolada Soomaaliland}}
 
 ==qabilada degan==
 *[[Reeryoonis]] 
@@ -106,3 +107,6 @@ Halgankii SNM waxa ka soo jeeda Mujaahid '''Aadan Tarabbi Jaamac (Tuug-Tarabbi)'
 *[[waridaad|Degmada waridaad]]
 *Degmada dhanaano
 *[[degmada ceelal]]
+[[Category:Juqraafiga Somaliland]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
