--- a/Awdal.mw
+++ b/Awdal.mw
@@ -113,3 +113,5 @@ Gobolkan waxaa magaala madaxdiisu ahaan jirtey magaalda [[Baki]], laakiin markii
 [[Category:Awdal]]
 [[Category:Magaalooyinka Soomaaliya]]
 [[Category:Gobolada Soomaaliya]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Gobolada Somaliland]]
