*Empty MediaWiki Message*

--- a/Sool.mw
+++ b/Sool.mw
@@ -1,4 +1,3 @@
-{{Coord|8|23|46|N|47|41|29|E|type:adm1st_region:SO_source:nlwiki|display=title}}
 {{Infobox settlement
 |name                   =Sool
 |native_name            = 
@@ -12,13 +11,13 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|             =Somalia  regions map Sool.png
+|image_map              =Somalia  regions map Sool.png
 |mapsize                =250px
-|map_caption            =Waxay Somalia  kaga taal.
+|map_caption            =Waxay Somaliland kaga taal.
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Dalka
-|subdivision_name       =
+|subdivision_name       ={{flag|Somaliland}}
 |subdivision_type1      =
 |subdivision_name1      =
 |seat_type              =Xarun
@@ -45,8 +44,6 @@
 |website                = 
 |footnotes              = 
 }}
-
-{{Gobolada Soomaaliland}}
 
 '''Sool''' waa gobol ku yaala bariga wadanka somalia, magaala madaxdeedina waa [[Las Anod|Laascaanood]]. Waxay xuduud laleedahay gobolada [[Togdheer]] [[Nugaal]] iyo [[Sanaag]] iyo waliba waxay xuduud la leedahay gobolka [[Bari (Gobol)|Bari]] ee dalka [[Soomaaliya]]. Sool waa gobol taariikh ahaan ka soo jeeda beelaha [[reer Darwiish]]. Wakhtiga gumeysiga waxay ahayd xarunta daraawiishta 
 
@@ -84,7 +81,7 @@ waxaa ka mid ah prosoorka xifradihiisa sida in uu somgas ka sameeyay digada Lu'a
 
 Waa degmada kala badha gobolada waqooyi waxayna ku taala galbeedka gobolka sool
 {{Gobolada Somaliland}}
-
+{{Gobolada Soomaaliland}}
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Gobolada Somaliland]]
 [[Category:Gobolada Soomaaliya]]
-
-* holhol
