*Empty MediaWiki Message*

--- a/Bula_xaar.mw
+++ b/Bula_xaar.mw
@@ -1,5 +1,5 @@
 '''bula xaar''' waa tuulo katirsan gobolka [[saaxil]] ee jamhuuriyada [[somaliland]]
 
-[[Category:Tuulooyinka somaliland]]
+[[Category:Tuulooyinka Somaliland]]
 [[Category:Somaliland]]
 [[Category:Magaalooyinka gobolka Saaxil]]
