*Empty MediaWiki Message*

--- a/Cali_Xaydh.mw
+++ b/Cali_Xaydh.mw
@@ -21,4 +21,7 @@ waxanu ka soo shaqeeyey dalalka [[Jabuuti]] iyo [[somaliland]].
 
 {{gumud}}
 
-[[Category:Tuulooyinka somaliland]]
+[[Category:Tuulooyinka Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Somaliland]]
+[[Category:Awdal]]
