*Empty MediaWiki Message*

--- a/Dararwayne.mw
+++ b/Dararwayne.mw
@@ -61,5 +61,7 @@
 ==Sidoo kale fiiri==
 *[https://geographic.org/geographic_names/name.php?uni=-4560023&fid=5791&c=somalia Dararweyne]
 * [[Magaalooyinka Somaliland]]
+[[Category:Tuulooyinka Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
 [[Category:Somaliland]]
-[[Category:Tuulooyinka somaliland]].
+[[Category:Sanaag]]
