*Empty MediaWiki Message*

--- a/Gadhka.mw
+++ b/Gadhka.mw
@@ -3,5 +3,5 @@
 Tuulada gadhku waxa ay degaan ahaan ama ay jaar la tahay magaalooyinka kala ah [[waridaad]] oo dhanka galbeed ka xigta iyo tuulada [[barkada cali xirsi]] oo dhanka bari ka xigta tuuladan deegaan ahaan waxa laga maamulaa  degmada [[caynabo]]
 
 [[Category:Tuulooyinka gobolka Togdheer]]
-[[Category:Tuulooyinka somaliland]]
+[[Category:Tuulooyinka Somaliland]]
 [[Category:Somaliland]]
