*Empty MediaWiki Message*

--- a/Garisa.mw
+++ b/Garisa.mw
@@ -2,7 +2,7 @@
 waxaa ku dhashay magaaladan madaxweynihii hore ee jabuuti xaaji xasan guuleed abtidoon waana deegaan aad u dad badan xaga cufnaanta dadka marka la eego
 
 [[Category:Salal]]
-[[Category:Tuulooyinka somaliland]]
+[[Category:Tuulooyinka Somaliland]]
 [[Category:Juqraafiga Somaliland]]
 [[Category:Somaliland]]
 [[Category:Magaalooyinka Somaliland]]
