*Empty MediaWiki Message*

--- a/Category:Tuulooyinka_Gobolka_Togdheer.mw
+++ b/Category:Tuulooyinka_Gobolka_Togdheer.mw
@@ -1,1 +1,5 @@
 Tuulooyinka Gobolka Togdheer
+[[Category:Tuulooyinka Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Somaliland]]
+[[Category:Gobolada Somaliland]]
