--- a/Boorama.mw
+++ b/Boorama.mw
@@ -142,3 +142,7 @@ Magaalada Borama waxay mataan la tahay magaalada Henley ee wadanka [[Ingiriis]]k
 {{Gobolada Soomaaliya}}
 {{Degmooyinka Gobolka Awdal}}
 [[Category:Magaalooyinka Soomaaliya]]
+[[Category:Tuulooyinka Somaliland]]
+[[Category:Magaalooyinka Somaliland]]
+[[Category:Somaliland]]
+[[Category:Awdal]]
