--- a/Category:Dugsiga_Sare_ee_Camuud.mw
+++ b/Category:Dugsiga_Sare_ee_Camuud.mw
@@ -11,7 +11,7 @@ Qoraal faahfaahsan fiiri [[Dugsiga Sare ee Camuud]].
 [[Category:Jaamacadaha Somaliland]]
 [[Category:Jaamacada Camuud]]
 [[Category:Waxbarasho]]
-[[Category:Caafimaad]]
+[[Category:Borama]]
 [[Category:Saynis]]
 [[Category:Ilbaxnimo]]
 [[Category:Noole]]
