--- a/Camuud.mw
+++ b/Camuud.mw
@@ -91,6 +91,7 @@ File:Amoud_University2.jpg|[[Jaamacada Camuud]]
 [[Category:Jaamacadaha Somaliland]]
 [[Category:Jaamacada Camuud]]
 [[Category:Waxbarasho]]
+[[Category:Boorama]]
 [[Category:Caafimaad]]
 [[Category:Saynis]]
 [[Category:Ilbaxnimo]]
