--- a/Jaamacadda_Camuud.mw
+++ b/Jaamacadda_Camuud.mw
@@ -178,3 +178,4 @@ Jaamacada waxaa aasaasay niman aqoonyaahana oo jooga wadanka suoudi arebia iyo a
 [[Category:Jaamacadaha Soomaaliya|Camuud]]
 [[Category:Awdal]]
 [[Category:Jaamacadaha Somaliland]]
+[[Category:Boorama]]
