*Empty MediaWiki Message*

--- a/Category:Jaamacada_Camuud.mw
+++ b/Category:Jaamacada_Camuud.mw
@@ -8,3 +8,4 @@ Halkan waxa ku jira maqaalo ku saabsan "Jaamacada Camuud".
 [[Category:Ilbaxnimo]]
 [[Category:Noole]]
 [[Category:Nolol]]
+[[Category:Boorama]]
