/* qaar kamida maxaadirooyinkii uu kaqaybgalay */

--- a/Axmed_Deedat.mw
+++ b/Axmed_Deedat.mw
@@ -1,13 +1,14 @@
-[[File:Deedat photo.jpg|thumb|right|Sh Axmed diidat]] 
+[[File:Deedat photo.jpg|thumb|right|Sh Axmed diidat|link=Special:FilePath/Deedat_photo.jpg]] 
 
 
 
-'''Axmed Deedat''' waxa uu dhashay 1 juun [[1918]] waxa uu dhintay 8 ogost [[2005]] shiikh dadaat waxa uu ahaa daaci islaamiya waxa uu kucaanbaxay doodaha.iyo qoraaladiisii uu isku barbar dhigi jiray ..islsaamka.iyo kiristanka .
+'''Axmed Deedat''' waxa uu dhashay 1 juun [[1918]] waxa uu dhintay 8 ogost [[2005]] shiikh deedaat waxa uu ahaa daaci islaamiya waxa uu kucaanbaxay doodaha.iyo qoraaladiisii uu isku barbar dhigi jiray ..diinta islsaamka.iyo diinta kiristaanka .
 
 == Taariikh Nololeedkiisii ==
 
 
-waxa uu ku dhashay shiikh didaat Magaalada Dashkinar gobalka.suwarat.ee wadanka [[Hindiya|india]].isla markii uu dhashayba aabihii waxa uu u safray xagaas iyo konfur afrika.aabihii waxa uu ahaa dawaarle amba harqaanle.kadib axmed waxa uu aabihii kadaba tagay.sanadii [[1927]].kadib markii ay waxbarashadii hindiya aad ugu adkaatay.waxa ay hooyadii dhimatay kadib.markii uu aaday xagaas iyo.konfur afrika.kadib axmed diidaa oo aad uyara wxa.sowajahay.duruufo aad u dag lakiin dada.oo aad fariid u haaa waxa uu ku dadaalay sidii uu u baranlahaa [[ingiriis]]iga.
+
+waxa uu ku dhashay shiikh deedaat Magaalada Dashkinar gobalka.suwaarat.ee wadanka india.isla markii uu dhashayba aabihii waxa uu u safray xagaas iyo konfur afrika.aabihii waxa uu ahaa dawaarle amba harqaanle.kadib axmed waxa uu aabihii kadaba tagay.sanadii [[1927]].kadib markii ay waxbarashadii hindiya aad ugu adkaatay.waxa ay hooyadii dhimatay kadib.markii uu aaday xagaas iyo.konfur afrika.kadib axmed diidaa oo aad uyara wxa.sowajahay.duruufo aad u dag lakiin dada.oo aad fariid u haaa waxa uu ku dadaalay sidii uu u baranlahaa [[ingiriis]]iga.
 
 
 == bilawgii dacwadiisa ==
@@ -18,11 +19,11 @@ ialaahay ha unaxariistee shiikh didaat waxa uu geeriyooday [[2005]]
 
 
 
-== qaar kamida maxaadirooyinkii uu kaqaybgalay ==
+== qaar kamida maxaadarooyinkii uu kaqaybgalay ==
 
-axmed deedaat waxa uu ka qaybgalay maxaadirooyin aad u badan kuwaas oo uu badankooda kula doodijiriay raga ugu sareeya diinta [[masiixiyada]] ragaasina waxa ay u badnaayeen [[maraykan]]
+Sheeq axmed deedaat waxa uu ka qaybgalay maxaadarooyin aad u badan kuwaas oo uu badankooda kula doodijiriay raga ugu sareeya diinta [[masiixiyada]] ragaasina waxa ay u badnaayeen [[maraykan]]
 
-waxaa ka midhaa kulamidii uu ka qayb galay sanadii [[1983]] kulan ay ku kulmeen isga iyo laba nin oo maraykan ah kulankaas oo kadhacay magaalada[[derben]] ee wadanka [[koonfur afrika]]
+waxaa ka midhaa kulamidii uu ka qayb galay sanadii [[1983]] kulan ay ku kulmeen isga iyo laba nin oo maraykan ah kulankaas oo kadhacay magaalada [[derben]] ee wadanka [[koonfur afrika]]
 
 waxa kale oo uu ka qayb galay isla sanadkaa isla magaaldaa kulan kadhacay oo lagaga doodayay nabi [[ciise]] iyo [[quraanka]] sida uu uga waramay
 
