*Empty MediaWiki Message*

--- a/Hogaamiye_Kooxeed.mw
+++ b/Hogaamiye_Kooxeed.mw
@@ -1,3 +1,4 @@
+[[File:HOOGAAMIYAHA kooxeed gaar.png|thumb|hoogaamiye kooxeed]]
 hogaamiye kooxeed sidaan wada og soonahay hogaamiye kooxeedku waa qof xukuma koox meel dagan,dalkeena soomaaliya waxaa soomaray hogamiye kooxeed farabadan wakaaas mudo farabadn soomaamulayay in kabadan shan iyo labatan sano kabadan iyadoo ay shacabka i geysteen dhac boob kufsi bili aadinimada kabaxsan,ayaa waliba waxay shaqsiyaadkaas dabiilayaasha ah ka mid noqdeen dowladii ugu danbeeyay ee kumeel gaarka ah  iyo tan hada jirto ee caalamka aqooonsanyahay waxaa nadiib dara ah nin cilmi aan lahayn dadka uu yiraahdo hogaan baan unoqanayaa
 
 Waxaan dadka soonaliyed usheegaya inay ka gudbaan waxa layirahdo kaligi talis waayo waxaa jira dadraba iney xukumaan dadka iyo dhulka soomaliyed
