*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -58,6 +58,6 @@
 |website                = 
 |footnotes              = 
 }}
-'''Abaalley''' waa tuulo dhacdo xuduudka ay wadaagaan [[somaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] 34 km.Waa dhul hodan ah oo ku haboon qodashada beeraha iyo dhaqashada xoolaha waxaaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.Waa goob muhiim ah oo taariikhi ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]].Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana dega  [[Reer Aw Xassan]].[[Wabiga Shabeelle|.<br>]]{{Gumud}}
+'''Abaaley''' waa tuulo dhacdo xuduudka ay wadaagaan Dalalka [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] fogaan dhan34 km.Waa dhul hodan ah oo Eebbe kumannaystay kheyraad badan oo dabiici ah kuna habboon qodashada beeraha iyo dhaqashada xoolaha waxaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.Waa goob muhiim ah oo taariikhi ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]] waxaana ay kamid ahayd meelihii ay Saameynta ballaadham kuyeesheen dagaalada udhaxeeyay Daada Soomaaliya iyo Itoobiya ee 77kii.Buur-Cukur ayaa iyaduna deris la ah.Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana dega  [[Reer Aw Xassan]] oo ah dad ku caan ah Barista iyo Faafinta Diinta Islaamka magac iyo maamuus ballaadhana ku dhex leh guud ahaan bulshada Soomaaliyeed meel kasta oo ay joogaanba.Abaaleey waxa ay leedahay Dugsi Hoose-dhexe,Xarun Caafimaad iyo Inbadan oo kamid ah Adeegyada Aas-aasiga ah sida Isgaadhsiinta waxaana ka shaqeeya Khadka labada Dal ee Soomaaliya iyo Itoobiyaba waaana Xarun ganacsi oo isku xidha inta badan gobolada Bariga iyo badhtamaha Soomaaliya iyo sidoo kale Gobolada Shabeelle iyo Qorraxey ee Dawlad Deegaanka Soomaalida   iyada oo dalaga waxsoosaarka Beeraha ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid Bulshada ku dhaqan goboladaasi.Dadka reer Abaaleey ayaa ah kuwa Hormuud u ah nabadda iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda amniga Xuduudaasi dheer ee labada dal udhaxeysa.[[Wabiga Shabeelle|<br>]]{{Gumud}}
 {{Degmooyinka Gobolka Hiiraan}}
 [[Category:Tuulooyinka Soomaaliya]]
