*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -21,13 +21,13 @@
 |pushpin_map_caption    =Location in Somalia.
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
-|subdivision_name       ={{ethiopia}}
+|subdivision_name       ={{Ethiopia}}
 |subdivision_type1      =Gobolka
-|subdivision_name1      =[[shabeele]]
-|subdivision_type2      =
+|subdivision_name1      =[[Shabeelle]]
+|subdivision_type2      =Feer-feer
 |subdivision_name2      =
-|government_footnotes   =
-|government_type        =
+|government_footnotes   =Soomaaliya iyo Itoobiya
+|government_type        =Federal
 |leader_title           =
 |leader_name            = 
 |established_title      =  
@@ -52,12 +52,16 @@
 |elevation_m            = 
 |postal_code_type       = 
 |postal_code            =
-|area_code              =
+|area_code              =251 iyo 251
 |blank_name             =
 |blank_info             =
 |website                = 
 |footnotes              = 
 }}
-'''Abaaley''' waa tuulo dhacdo xuduudka ay wadaagaan Dalalka [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] fogaan dhan34 km.Waa dhul hodan ah oo Eebbe kumannaystay kheyraad badan oo dabiici ah kuna habboon qodashada beeraha iyo dhaqashada xoolaha waxaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.Waa goob muhiim ah oo taariikhi ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]] waxaana ay kamid ahayd meelihii ay Saameynta ballaadham kuyeesheen dagaalada udhaxeeyay Daada Soomaaliya iyo Itoobiya ee 77kii.Buur-Cukur ayaa iyaduna deris la ah.Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana dega  [[Reer Aw Xassan]] oo ah dad ku caan ah Barista iyo Faafinta Diinta Islaamka magac iyo maamuus ballaadhana ku dhex leh guud ahaan bulshada Soomaaliyeed meel kasta oo ay joogaanba.Abaaleey waxa ay leedahay Dugsi Hoose-dhexe,Xarun Caafimaad iyo Inbadan oo kamid ah Adeegyada Aas-aasiga ah sida Isgaadhsiinta waxaana ka shaqeeya Khadka labada Dal ee Soomaaliya iyo Itoobiyaba waaana Xarun ganacsi oo isku xidha inta badan gobolada Bariga iyo badhtamaha Soomaaliya iyo sidoo kale Gobolada Shabeelle iyo Qorraxey ee Dawlad Deegaanka Soomaalida   iyada oo dalaga waxsoosaarka Beeraha ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid Bulshada ku dhaqan goboladaasi.Dadka reer Abaaleey ayaa ah kuwa Hormuud u ah nabadda iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda amniga Xuduudaasi dheer ee labada dal udhaxeysa.[[Wabiga Shabeelle|<br>]]{{Gumud}}
+'''Abaaley''' waa tuulo dhacdo xuduudka ay wadaagaan Dalalka [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] fogaan dhan 34 km.Waa dhul hodan ah oo [[Alle]] kumannaystay kheyraad badan oo dabiici ah kuna habboon qodashada beeraha iyo dhaqashada xoolaha waxaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.
+
+Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]] waxaana ay kamid ahayd meelihii ay Saameynta ballaadham kuyeesheen dagaalada udhaxeeyay Daada Soomaaliya iyo Itoobiya ee 77kii.Buur-Cukur ayaa iyaduna deris la ah.Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana dega  [[Reer Aw Xassan]] oo ah dad ku caan ah Barista iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan bulshada [[Soomaaliyeed]] meel kasta oo ay joogaanba.
+
+[[Abaaley|Abaaleey]] waxa ay leedahay [[Dugsi]] Hoose-dhexe,Xarun [[Caafimaad]] iyo Inbadan oo kamid ah Adeegyada Aas-aasiga ah sida [[Isgaadhsiinta Soomaaliya|Isgaadhsiinta]] waxaana ka shaqeeya Khadka labada Dal ee [[Soomaaliya]] iyo [[Itoobiya]] waana Xarun [[ganacsi]] oo isku xidha inta badan [[Gobolada Soomaaliya|gobolada]] Bariga iyo badhtamaha [[Soomaaliya]] iyo sidoo kale Gobolada [[Wabiga Shabeelle|Shabeelle]] iyo Qorraxey ee [[DDS|Dawlad Deegaanka Soomaalida]]  iyada oo dalaga iyo waxsoosaarka [[Beeraha Soomaaliya|Beeraha]] ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid [[Bulshada Soomaaliya|Bulshada]] ku dhaqan goboladaasi.[[Dad|Dadka]] reer [[Abaaley|Abaaleey]] ayaa ah kuwa Hormuud u ah [[Nabad|nabadda]] iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda [[Nabad|amniga]] [[Xuduudkii 1908|Xuduudaasi]] dheer ee labada [[Wadan|dal]] udhaxeysa.[[Wabiga Shabeelle|<br>]]{{Gumud}}
 {{Degmooyinka Gobolka Hiiraan}}
 [[Category:Tuulooyinka Soomaaliya]]
