*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -21,12 +21,12 @@
 |pushpin_map_caption    =Location in Somalia.
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
-|subdivision_name       ={{Ethiopia}}
+|subdivision_name       ={{Ethiopia}} Iyo [[Soomaaliya]]
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeelle]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
-|government_footnotes   =[[Soomaaliya iyo Itoobiya]]
+|government_footnotes   =
 |government_type        =Federal
 |leader_title           =
 |leader_name            = 
