--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -16,16 +16,16 @@
 |mapsize                = 
 |map_caption            = 
 |pushpin_map            =Somalia
-|pushpin_label_position =bottom
+|pushpin_label_position =Top
 |pushpin_mapsize        =
 |pushpin_map_caption    =Location in Somalia.
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
 |subdivision_name       ={{Ethiopia}} Iyo [[Soomaaliya]]
 |subdivision_type1      =Gobolka
-|subdivision_name1      =[[Shabeelle]]
+|subdivision_name1      =[[Shabeelle]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
-|subdivision_name2      =
+|subdivision_name2      =Feer-feer
 |government_footnotes   =
 |government_type        =Federal
 |leader_title           =
