*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -25,8 +25,8 @@
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeelle]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
-|subdivision_name2      =Feer-feer
-|government_footnotes   =
+|subdivision_name2      =
+|government_footnotes   ={{Itoobiya}}
 |government_type        =Federal
 |leader_title           =
 |leader_name            = 
