*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -26,7 +26,7 @@
 |subdivision_name1      =[[Shabeelle]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
-|government_footnotes   ={{Itoobiya}}
+|government_footnotes   ={{Ethiopia}} Iyo {{Somalia}}
 |government_type        =Federal
 |leader_title           =
 |leader_name            = 
