*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -1,5 +1,5 @@
 {{Infobox settlement
-|official_name          =Abaaley
+|official_name          =[[Abaaley]]
 |other_name             =
 |native_name            =  
 |nickname               = 
@@ -21,13 +21,13 @@
 |pushpin_map_caption    =Location in Somalia.
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
-|subdivision_name       ={{Ethiopia}} Iyo [[Soomaaliya]]
+|subdivision_name       =[[Itoobiya]] Iyo [[Soomaaliya]]
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeelle]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
 |government_footnotes   =[[Itoobiya]] iyo [[Soomaaliya]]
-|government_type        =Federal
+|government_type        =[[Federal]]
 |leader_title           =
 |leader_name            = 
 |established_title      =  
@@ -35,7 +35,7 @@
 |area_magnitude         = 
 |unit_pref              =Metric
 |area_footnotes         =
-|area_total_km2         =
+|area_total_km2         =20 Km
 |area_land_km2          = 
 |population_as_of       = 
 |population_footnotes   =
