--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -26,7 +26,7 @@
 |subdivision_name1      =[[Shabeelle]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
-|government_footnotes   =[[Itoobiya]] iyo [[Soomaaliya]]
+|government_footnotes   =
 |government_type        =[[Federal]]
 |leader_title           =
 |leader_name            = 
@@ -35,7 +35,7 @@
 |area_magnitude         = 
 |unit_pref              =Metric
 |area_footnotes         =
-|area_total_km2         =20 Km
+|area_total_km2         =20
 |area_land_km2          = 
 |population_as_of       = 
 |population_footnotes   =
