*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -23,7 +23,7 @@
 |subdivision_type       =Dalka
 |subdivision_name       =[[Itoobiya]] Iyo [[Soomaaliya]]
 |subdivision_type1      =Gobolka
-|subdivision_name1      =[[Shabeelle]] Iyo [[Hiiraan]]
+|subdivision_name1      =[[Shabeele]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
 |government_footnotes   =
@@ -52,13 +52,13 @@
 |elevation_m            = 
 |postal_code_type       = 
 |postal_code            =
-|area_code              =251 iyo 251
+|area_code              =251 iyo 252
 |blank_name             =
 |blank_info             =
 |website                = 
 |footnotes              = 
 }}
-'''Abaaley''' waa tuulo dhacdo xuduudka ay wadaagaan Dalalka [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] fogaan dhan 34 km.Waa dhul hodan ah oo [[Alle]] kumannaystay kheyraad badan oo dabiici ah kuna habboon qodashada beeraha iyo dhaqashada xoolaha waxaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.
+'''Abaaley''' waa tuulo  caan ah oo dhacdo xuduudka ay wadaagaan Dalalka [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] fogaan dhan 34 km.Waa dhul hodan ah oo [[Alle]] kumannaystay kheyraad badan oo dabiici ah kuna habboon qodashada beeraha iyo dhaqashada xoolaha waxaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.
 
 Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]] waxaana ay kamid ahayd meelihii ay Saameynta ballaadham kuyeesheen dagaalada udhaxeeyay Daada Soomaaliya iyo Itoobiya ee 77kii.Buur-Cukur ayaa iyaduna deris la ah.Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana dega  [[Reer Aw Xassan]] oo ah dad ku caan ah Barista iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan bulshada [[Soomaaliyeed]] meel kasta oo ay joogaanba.
 
