waxaa ka saxay dalka ee ku taalo tuulada

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -21,7 +21,7 @@
 |pushpin_map_caption    =Location in Somalia.
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
-|subdivision_name       =[[Itoobiya]] Iyo [[Soomaaliya]]
+|subdivision_name       =[[Soomaaliya]]
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeele]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
@@ -52,7 +52,7 @@
 |elevation_m            = 
 |postal_code_type       = 
 |postal_code            =
-|area_code              =251 iyo 252
+|area_code              =252
 |blank_name             =
 |blank_info             =
 |website                = 
