--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -36,7 +36,7 @@
 |unit_pref              =Metric
 |area_footnotes         =
 |area_total_km2         =20
-|area_land_km2          = 
+|area_land_km2          =5 
 |population_as_of       = 
 |population_footnotes   =
 |population_note        =
@@ -58,10 +58,10 @@
 |website                = 
 |footnotes              = 
 }}
-'''Abaaley''' waa tuulo  caan ah oo dhacdo xuduudka ay wadaagaan Dalalka [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa magaalada [[Beledweyne|baladweyne]] fogaan dhan 34 km.Waa dhul hodan ah oo [[Alle]] kumannaystay kheyraad badan oo dabiici ah kuna habboon qodashada beeraha iyo dhaqashada xoolaha waxaana mara [[Wabiga Shabeelle|wabiga shabeelle.]]Waxa ay deris la tahay oo ay maamul ahaana hoos timaada [[Degmada Feer-feer]],Tuulooyinka Deefoow iyo Degmada Far-libaax ayay sidoo kale xad la wadaagtaa.
+'''Abaaley''' waa tuulo  caan ah oo dhacda amaba kutaalla [[Xadka Xadka|Xuduudka]] ay wadaagaan [[Dalalka]] [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna u jirtaa [[Magaalo|magaalada]] [[Beledweyne|baladweyne]] fogaan dhan 34 km.Waa dhul hodan ah oo [[Alle]] kumannaystay [[Shidaal|kheyraad]] badan oo [[Dabiiciga|dabiici]] ah kuna habboon qodashada [[Beeraha Soomaaliya|beeraha]] iyo dhaqashada [[Xoolo|xoolaha]] waxaana mara [[Wabiga Shabeelle|wabiga shabeelle]] oo kamid ah wabiyada ugu waawayn geeska Afrika waxaana ay deris la tahay oo ay [[Maamulgoboleedka Soomaaliya|maamul]] ahaana hoos timaada [[Degmada Feer-feer]].Tuulooyinka [[DEEFOOW|Deefoow]] iyo Degmada Far-libaax ee Isla gobolka [[Hiiraan]] ayay sidoo kale xad la wadaagtaa.
 
-Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]] waxaana ay kamid ahayd meelihii ay Saameynta ballaadham kuyeesheen dagaalada udhaxeeyay Daada Soomaaliya iyo Itoobiya ee 77kii.Buur-Cukur ayaa iyaduna deris la ah.Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana dega  [[Reer Aw Xassan]] oo ah dad ku caan ah Barista iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan bulshada [[Soomaaliyeed]] meel kasta oo ay joogaanba.
+Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ahayd saldhig militari oo baaxad leh ayna isticmaali jireen [[Ciidanka Xooga Soomaaliya|ciidamadii xoogga dalka]] [[Soomaaliya]] waxaana ay kamid ahayd meelihii ay Saameynta ballaadham kuyeesheen dagaalada udhaxeeyay Daada Soomaaliya iyo Itoobiya ee 77kii.Buur-Cukur ayaa iyaduna deris la ah.Dadkeedu waa Xoolo-dhaqato-beeraley, waxaana degta Beesha [[Reer Aw Xassan]] oo ah dad ku caan ah Barista iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan bulshada [[Soomaaliyeed]] meel kasta oo ay joogaanba aadna looga haybaysto.
 
-[[Abaaley|Abaaleey]] waxa ay leedahay [[Dugsi]] Hoose-dhexe,Xarun [[Caafimaad]] iyo Inbadan oo kamid ah Adeegyada Aas-aasiga ah sida [[Isgaadhsiinta Soomaaliya|Isgaadhsiinta]] waxaana ka shaqeeya Khadka labada Dal ee [[Soomaaliya]] iyo [[Itoobiya]] waana Xarun [[ganacsi]] oo isku xidha inta badan [[Gobolada Soomaaliya|gobolada]] Bariga iyo badhtamaha [[Soomaaliya]] iyo sidoo kale Gobolada [[Wabiga Shabeelle|Shabeelle]] iyo Qorraxey ee [[DDS|Dawlad Deegaanka Soomaalida]]  iyada oo dalaga iyo waxsoosaarka [[Beeraha Soomaaliya|Beeraha]] ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid [[Bulshada Soomaaliya|Bulshada]] ku dhaqan goboladaasi.[[Dad|Dadka]] reer [[Abaaley|Abaaleey]] ayaa ah kuwa Hormuud u ah [[Nabad|nabadda]] iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda [[Nabad|amniga]] [[Xuduudkii 1908|Xuduudaasi]] dheer ee labada [[Wadan|dal]] udhaxeysa.[[Wabiga Shabeelle|<br>]]{{Gumud}}
+[[Abaaley|Abaaleey]] waxa ay leedahay [[Dugsi]] Hoose-dhexe,Xarun [[Caafimaad]] iyo Inbadan oo kamid ah [[Adeega Boostada Soomaaliya|Adeegyada]] [[Aasaaska Xisaabta|Aas-aasiga]] ah sida [[Isgaadhsiinta Soomaaliya|Isgaadhsiinta]] waxaana ka shaqeeya Khadka labada [[Wadan|Dal]] ee [[Soomaaliya]] iyo [[Itoobiya]] waana Xarun [[ganacsi]] oo isku xidha inta badan [[Gobolada Soomaaliya|gobolada]] Bariga iyo badhtamaha [[Soomaaliya]] iyo sidoo kale Gobolada [[Wabiga Shabeelle|Shabeelle]] iyo Qorraxey ee [[DDS|Dawlad Deegaanka Soomaalida]]  iyada oo dalaga iyo waxsoosaarka [[Beeraha Soomaaliya|Beeraha]] ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid [[Bulshada Soomaaliya|Bulshada]] ku dhaqan goboladaasi.[[Dad|Dadka]] reer [[Abaaley|Abaaleey]] ayaa ah kuwa Hormuud u ah [[Nabad|nabadda]] iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda [[Nabad|amniga]] [[Xuduudkii 1908|Xuduudaasi]] dheer ee labada [[Wadan|dal]] udhaxeysa.[[Wabiga Shabeelle|<br>]]{{Gumud}}
 {{Degmooyinka Gobolka Hiiraan}}
 [[Category:Tuulooyinka Soomaaliya]]
