--- a/Koonfur_Galbeed.mw
+++ b/Koonfur_Galbeed.mw
@@ -29,7 +29,7 @@
 | today                = 
 }}
 
-'''Koonfur Galbeed''' ama   '''Dowlad goboleedka Koonfur galbeed ee soomaaliya''' sidoo kale loo yaqaan '''Koonfur Orsi''' ama '''Koofur Orsi''' waa maamul goboleed ku yaalo koonfur galbeed  [[Soomaaliya]]. Koonfur galbeed waxay ka koobantahay gobolada [[Baay]], [[Bakool]] iyo [[Shabeellaha Hoose]], waxayna xuduud la leedahay  doowlad goboleedyada [[Jubaland]] iyo [[Galmudug]]. Maamulkaan  waxaa aas aasay '''Xasan Maxamednuur Shaatigaduud''' iyo '''Maxamed Ibrahim Xaabsade''' oo kawada tirsanaa hogamiyayaashi RRA. 
+'''Koonfur Galbeed''' ama   '''Dowlad goboleedka Koonfur galbeed ee soomaaliya''' sidoo kale loo yaqaan '''Koonfur Orsi''' ama '''Koofur Orsi''' waa maamul goboleed ku yaalo koonfur galbeed  [[Soomaaliya]]. Koonfur galbeed waxay ka koobantahay gobolada [[Baay]], [[Bakool]] iyo [[Shabeellaha Hoose]], waxayna xuduud la leedahay  doowlad goboleedyada [[Jubaland]] iyo [[Galmudug|Hirshabelle]]. Maamulkaan  waxaa aas aasay '''Xasan Maxamednuur Shaatigaduud''' iyo '''Maxamed Ibrahim Xaabsade''' oo kawada tirsanaa hogamiyayaashi RRA. 
 
 
 
