*Empty MediaWiki Message*

--- a/Template:Lang-it.mw
+++ b/Template:Lang-it.mw
@@ -1,7 +1,2 @@
-{{Language with name|it|Af-Taliyaani|''{{{1}}}''|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
-
-
-
-</noinclude>
+{{Language with name|it|Af Talyaani |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|it]]</noinclude>
