*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -18,10 +18,10 @@
 |pushpin_map            =Ethiopia
 |pushpin_label_position =Top
 |pushpin_mapsize        =
-|pushpin_map_caption    =Location in Ethiopia
+|pushpin_map_caption    =Location in Ethiopia/Somalia
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
-|subdivision_name       =[[Ethiopia]]
+|subdivision_name       =[[Itoobiya/Soomaalia]]
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeele]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
@@ -52,7 +52,7 @@
 |elevation_m            = 
 |postal_code_type       = 
 |postal_code            =
-|area_code              =251
+|area_code              =251/252
 |blank_name             =
 |blank_info             =
 |website                = 
