*Empty MediaWiki Message*

--- a/Template:Lang-ja.mw
+++ b/Template:Lang-ja.mw
@@ -1,1 +1,2 @@
-{{Language with name|ja|Jabaaniis|{{{1}}}|links={{{links|{{{link|yes}}}}}}}}<
+{{Language with name|ja|Af Jabaniis |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|ja]]</noinclude>
