*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -18,10 +18,10 @@
 |pushpin_map            =Ethiopia
 |pushpin_label_position =Top
 |pushpin_mapsize        =
-|pushpin_map_caption    =Location in Ethiopia/Somalia
+|pushpin_map_caption    =Location in Itoobiya/Soomaaliya
 |coordinates_display    =inline,title
 |subdivision_type       =Dalka
-|subdivision_name       =[[Itoobiya/Soomaalia]]
+|subdivision_name       =[[Itoobiya/Soomaaliya]]
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeele]] Iyo [[Hiiraan]]
 |subdivision_type2      =Feer-feer
