--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -60,7 +60,7 @@
 }}
 '''Abaaley''' waa tuulo  caan ah oo dhacda amaba kutaalla [[Xadka Xadka|Xuduudka]] ay wadaagaan [[Dalalka]] [[somaliya|Soomaaliya]] iyo [[itoobiya]] waxeyna  [[Magaalo|magaalada]] [[Beledweyne|baladweyne]] ee xarunta [[Gobolada Soomaaliya|gobolka]] Hiiraan ah ujirtaa fogaan dhan 34 km.Waa dhul hodan ah oo [[Alle]] kumannaystay [[Shidaal|kheyraad]] badan oo [[Dabiiciga|dabiici]] ah kuna habboon qodashada [[Beeraha Soomaaliya|beeraha]] iyo dhaqashada [[Xoolo|xoolaha]] waxaana mara [[Wabiga Shabeelle|wabiga shabeelle]] oo kamid ah wabiyada ugu waawayn geeska Afrika waxaana ay deris la tahay oo haatan ay [[Maamulgoboleedka Soomaaliya|maamul]] ahaana hoos timaada [[Degmada Feer-feer]] oo qudheeda kubeegan xadka kala qeybiya Wadamada Soomaaliya iyo Itoobiya.Tuulooyinka [[DEEFOOW|Deefoow]] iyo Degmada Far-libaax ee Isla gobolka [[Hiiraan]] ayay sidoo kale xad la wadaagtaa oo [[Koonfur]] iyo [[Galbeed]] kakala Xiga.
 
-Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ah saldhig militari oo baaxad leh iyo goob taariikhi ah waxaana ay kamid ahayd meelihii ay Saameynta ballaadhan kuyeesheen dagaaladii udhaxeeyay [[Dowlad|Dawladaha]] [[Soomaaliya]] iyo [[Itoobiya]] ee 1977-dii.Buur-Cukur ayaa iyaduna deris la ah oo ka xigta dhanka Waqooyi ee Degmada [[Mustaxiil]].Dadkeedu waa [[Xoolo]]-dhaqato-[[beeraley]], waxaana degta [[Qabiil|Beesha]] [[Reer Aw Xassan]] oo ah dad ku caan ah [[Bare|Barista]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto.
+Waa [[Goobo|goob]] muhiim ah oo [[Taariikh|taariikhi]] ah maadaama ay dhacdo xadka labo dal kala qeybiya.Waxaa in yar un ujirta oo umuuqata buurta caanka ah ee Bur-dhiinle oo ah saldhig militari oo baaxad leh iyo goob taariikhi ah waxaana ay kamid ahayd meelihii ay Saameynta ballaadhan kuyeesheen dagaaladii udhaxeeyay [[Dowlad|Dawladaha]] [[Soomaaliya]] iyo [[Itoobiya]] ee 1977-dii.Buur-Cukur ayaa iyaduna deris la ah oo ka xigta dhanka Waqooyi ee Degmada [[Mustaxiil]].Dadkeedu waa [[Xoolo]]-dhaqato-[[beeraley]], waxaana degta ama ay gaar utahay oo iska leh [[Qabiil|Beesha]] [[Reer Aw Xassan]] oo ah dad ku caan ah [[Bare|Barista]] iyo Faafinta [[Diinta Soomaalida|Diinta]] [[Islaam|Islaamka]] magac iyo maamuus ballaadhana ku dhex leh guud ahaan [[Bulshada Soomaaliya|bulshada]] [[Soomaaliyeed]] meel kasta oo ay [[Dunida]] ka joogaanba aadna looga haybaysto.
 
 [[Abaaley|Abaaleey]] waxa ay leedahay [[Dugsi]] Hoose-dhexe, Xarun [[Caafimaad]] [[Masaajid|,Masjid weyn]],Madaraso iyo Inbadan oo kamid ah [[Adeega Boostada Soomaaliya|Adeegyada]] [[Aasaaska Xisaabta|Aas-aasiga]] ah ee bulshada sida;Jidadka Caadiga ah iyo [[Isgaadhsiinta Soomaaliya|Isgaadhsiinta]] waxaana ka shaqeeya Khadka labada [[Wadan|Dal]] ee [[Soomaaliya]] iyo [[Itoobiya]] waana Xarun [[ganacsi]] oo isku xidha inta badan [[Gobolada Soomaaliya|gobolada]] Bariga iyo badhtamaha [[Soomaaliya]] iyo sidoo kale Gobolada [[Wabiga Shabeelle|Shabeelle]] iyo Qorraxey ee [[DDS|Dawlad Deegaanka Soomaalida]]  iyada oo dalaga iyo waxsoosaarka [[Beeraha Soomaaliya|Beeraha]] ee halkaasi kasoo go'a ay kutiirsan yihiin qaar badan oo kamid [[Bulshada Soomaaliya|Bulshada]] ku dhaqan goboladaasi.[[Dad|Dadka]] reer [[Abaaley|Abaaleey]] ayaa ah kuwa Hormuud u ah [[Nabad|nabadda]] iyo Xassiloonida deegaanadaasi waxaana ay kaalin muhiim ahi kaga jiraan sugidda [[Nabad|amniga]] [[Xuduudkii 1908|Xuduudaasi]] dheer ee labada [[Wadan|dal]] udhaxeysa oo tan iyo waxii ka danbeeyay bur-burkii [[Dowlad|Dawladnimada]] [[Soomaaliya]] ay iyagu iskood uga shaqeeynayaan una xilsaarnaayeen.[[Wabiga Shabeelle|<br>]]{{Gumud}}
 {{Degmooyinka Gobolka Hiiraan}}
