--- a/Template:Lang-ru.mw
+++ b/Template:Lang-ru.mw
@@ -1,3 +1,2 @@
-{{Language with name|ru|Af-Ruush|''{{{1}}}''|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|ru|Af Ruush |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|ru]]</noinclude>
