--- a/Template:Lang-so.mw
+++ b/Template:Lang-so.mw
@@ -1,3 +1,2 @@
-{{Language with name|so|Af-Soomaali|''{{{1}}}''|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|so|Af Soomaali |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|so]]</noinclude>
