--- a/Template:Lang-sv.mw
+++ b/Template:Lang-sv.mw
@@ -1,6 +1,2 @@
-{{Language with name|sv|Af-Iswiidhan|''{{{1}}}''|links={{{links|yes}}}}}<noinclude>
-{{Documentation|Template:Lang-x/doc}}
-
-
-
-</noinclude>
+{{Language with name|sv|Af Swiidhish |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|sv]]</noinclude>
