--- a/Template:Lang-tr.mw
+++ b/Template:Lang-tr.mw
@@ -1,3 +1,2 @@
-{{Language with name|tr|Af-Turki|{{{1}}}|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|tr|Af Turki |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|tr]]</noinclude>
