--- a/Template:Lang-uk.mw
+++ b/Template:Lang-uk.mw
@@ -1,3 +1,2 @@
-{{Language with name|uk|Af-Ukrani|''{{{1}}}''|links={{{links|yes}}}}}<noinclude>
-
-{{Documentation|Template:Lang-x/doc}}
+{{Language with name|uk|Af Ukrain |{{{1}}}}}<noinclude>
+[[Category:Lang-x templates|uk]]</noinclude>
