poster in Somali

--- a/Fayraska_faafa_ee_Korona_2019–20.mw
+++ b/Fayraska_faafa_ee_Korona_2019–20.mw
@@ -1,4 +1,5 @@
 [[File:COVID-19 Outbreak World Map per Capita.svg|thumb]]
+[[File:Stop the Spread of Germs updated (Somali).pdf|thumb|Jooji Faafidda Jeermiska]]
 '''Fayraska faafa ee Korona 2019–20''' waa cudur la isku daarsado oo looyaqaan '''Covid-19'''. Cudurkaan waxa uu ku dhacaa habdhiska neefmareenka [[Insaan|insaanka]], wuxuuna wataa qufac iyo qandho<ref>https://www.who.int/docs/default-source/coronaviruse/getting-workplace-ready-for-covid-19.pdf</ref><ref>https://www.researchgate.net/publication/339515532_The_epidemiology_and_pathogenesis_of_coronavirus_disease_COVID-19_outbreak</ref>, qofkii uu ku dhacaa neh oo mudo gaaban ku dili karo hadii difaaca jirkiisa liito.
 
 Covid-19 wuxuu asal ahaan ka dilaacay suuq lagu magacaabo "wet market"<ref>https://www.garoweonline.com/so/maqaalo/coronavirus-astaamaha-cudurka-halistiisa-habka-uu-ku-faafo-iyo-sida-looga-hortaggo</ref>, ama suuq qooyan, oo lagu iibiyo xayawaanada dhintay iyo kuwa nool ee magaalada [[Wuhan]] ee dalka [[Shiinaha]] bishii diseembar 2019kii, wuxuuna ku faafay dalal badan oo caalamka ah. 
